# texonis-cli

./: CMakeLists.txt  LICENSE.md
src/: texonis.cpp  texonis.h
src/main/: texonis-cli.cpp  texonis.cpp  texonis.h
